# lmu-soda-knowledge-sharing-tutorials

./: .gitignore  README.md
Azure_Authentication/: README.md  customized_azure_login.py  login_to_azure_cognitive_services.py
Azure_OpenAI_samples/: README.md  soda_starter_code_Azure_OpenAI.py  soda_starter_code_RetrievalAugmentedGeneration.py
Basic_Samples/: README.md  login_to_azure_cognitive_services.py  soda_starter_code_Azure_OpenAI.py  soda_starter_code_RetrievalAugmentedGeneration.py
azure-openAI-recipes/: README.md  soda_starter_code_Azure_OpenAI.py  soda_starter_code_RetrievalAugmentedGeneration.py
azure-quick-start/: README.md  azure-open-ai-tutorial.md
azure_authentication/: AuthenticationWorkflowSetup.md  LICENSE  README.md  pyproject.toml
azure_authentication/src/azure_authentication/: __init__.py  customized_azure_login.py
azure_authentication/tests/: customized_azure_login_unittest.py
code-recipies/: README.md  soda_starter_code_Asynchronous_Azure_OpenAI.py  soda_starter_code_AzureOpenAiAuthentication.R  soda_starter_code_Azure_OpenAI.py  soda_starter_code_RetrievalAugmentedGeneration.py
technological-literacy/: README.md  env-files.md
